--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 .container {}
 
 .container-navbar {
-    background-color: crimson;
+    background-color: #C0C0C0;
     width: 100%px;
     height: 10vh;
     display: flex;
@@ -31,7 +31,7 @@ html {
 }
 
 .li-navbar:hover {
-    background-color: maroon;
+    background-color: #727272;
     transition: 0.5s ease-in-out;
     transition-delay: 0.2s;
     border-radius: 20px;
@@ -44,7 +44,7 @@ html {
 }
 
 .container-content {
-    background-color: #555;
+    background-color: #898989;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,7 +54,7 @@ html {
 .kata-sambutan {
     padding: 30px;
     margin-top: -30px;
-    font-family: arial;
+    font-family: Georgia;
     font-size: 20px;
     text-indent: 50px;
 }   
@@ -65,7 +65,7 @@ html {
     text-decoration: none;
     font-size: 30px;
     width: 770px;
-    height: 400px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -76,15 +76,15 @@ html {
     -moz-box-shadow: 18px 19px 8px 0px rgba(0,0,0,0.78);;
 }
 
-.img-hi-content {
-    width: 24%;
-    height: 62%;
+.img-1-content {
+    width: 380px;
+    height: 300px;
     margin-bottom: -10px;
 }
 
 .container-footer {
     height: 10vh;
-    background-color: crimson;
+    background-color: rgb(92, 92, 92);
     display: flex;
     justify-content: center;
     align-items: center;
