--- a/style.css
+++ b/style.css
@@ -64,8 +64,8 @@ html {
     color: black;
     text-decoration: none;
     font-size: 30px;
-    width: 800px;
-    height: 1200px;
+    width: 180vh;
+    height: 78vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
