--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ html {
     color: black;
     text-decoration: none;
     font-size: 30px;
-    width: 50vh;
+    width: 500px;
     height: 68vh;
     display: flex;
     flex-direction: column;
